@@ -10,7 +10,7 @@ use Carp;
 use DateTime::Duration;
 use DateTime::Helpers;
 use DateTime::Locale 0.41;
-use DateTime::TimeZone 1.09;
+use DateTime::TimeZone 1.74;
 use Params::Validate 0.76
     qw( validate validate_pos UNDEF SCALAR BOOLEAN HASHREF OBJECT );
 use POSIX qw(floor);
