@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- The latest historical changes in DateTime::TimeZone 1.74 caused some tests
+  to fail. Reported by Slaven Rezic. RT #98483.
+
+- This release of DateTime.pm now requires the DateTime::TimeZone 1.74.
+
+
 1.10   2014-05-05
 
 - Some tests added in 1.09 would fail on a Perl without a 64-bit
